# rustapi

./: .gitignore  Cargo.toml  LICENSE  README.md  api-tests.http  config.yaml
.github/workflows/: ci.yml
.sqlx/: query-2f12541a6b99acf6d9e8f7ad13438df4ab92edcbfa01f38930aae63f1554b534.json  query-3fdc7d26905a78d24c7f9367bb716ae27e58dcead0b20e8396915ab89ad50af2.json  query-8042b50d3964d2399435395fc6bcbcd59fe812f695fff9ef6292453b378ee571.json  query-9d8cef01a387b5b816fb37a685efe370738784f5fe03357076e09687b077e271.json  query-b3d86c4f37ab9579e89772e682706021803bf48618bd42bb30305135a9ea5c65.json  query-cc6de3cc549fe48e6b6664bbc0d704bf9ee7a7bdcb79b8bdcaf465f361dae1be.json
migrations/: 20240101000000_create_tasks.sql  20240102000000_create_users.sql
src/: auth.rs  auth_hardened.rs  auth_middleware.rs  config.rs  doc.rs  main.rs
